--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "zendframework/zend-mvc": "^3.0.1",
         "zfcampus/zf-development-mode": "^3.0",
         "doctrine/doctrine-orm-module": "^2.1",
-        "phpoffice/phpspreadsheet": "^1.8"
+        "phpoffice/phpspreadsheet": "^1.8",
+        "twbs/bootstrap": "4.3.1"
     },
     "autoload": {
         "psr-4": {
